# ReinformentLearningFundamentals

./: .gitignore  CMakeLists.txt  README.md  a.out  bonusInActionSelection.cpp  dynaQ.cpp  gamblerProblem.py  n-stepTD  n-stepTD.cpp  off-policyPredictionProblem  off-policyPredictionProblem.cpp  racetrack.py  windyGridworld  windyGridworld.cpp
DynaQ/: assignment.ipynb
FunctionApproximationAndControl/: assignment.ipynb
ImplementYourAgent/: Course4ProgrammingAssignment2-v4.ipynb
QLearningAndExpectedSarsa/: assignment.ipynb
SemiGradientTD/: assignment.ipynb
SoftmaxActorCritic/: assignment.ipynb
TDLearning/: assignment.ipynb
TDStateAggregation/: assignment.ipynb
bairdCounter/: bairdCounterRead.py  bairdsCounter  bairdsCounter.cpp  weights_data.txt
